--- a/src/SingleProduct.css
+++ b/src/SingleProduct.css
@@ -2,7 +2,20 @@
     text-align: center;
 }
 .singleProduct{
-    margin-top: 5rem;
+    margin-top: -10rem;
     margin-left: 2rem;
     margin-right: 2rem;
 }
+
+h1,
+h2,
+h3,
+h4 {
+   font-family: "Work Sans", sans-serif;
+}
+
+h2 {
+    font-size: 2.4rem;
+    font-weight: 300;
+    white-space: normal;   
+   }
