--- a/src/components/ProductDetails.css
+++ b/src/components/ProductDetails.css
@@ -43,8 +43,8 @@
       flex-direction: column;
       gap: 1rem;
       font-size: 1rem;
-      span {
-         font-weight: bold;
-      }
+      text-align: initial;
+      border-bottom: 2px solid #060606;
+      width: 100%;
     }
   }
