--- a/src/components/ProductImage.css
+++ b/src/components/ProductImage.css
@@ -1,13 +1,39 @@
-.grid-four-column {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
-  }
-
+.grid {
+  flex-direction: row;
+  justify-items: center;
+  align-items: center;
+  width: 100%;
+  gap: 1rem;
+  /* order: 2; */
   img {
     max-width: 100%;
     max-height: 100%;
     background-size: cover;
     object-fit: contain;
     cursor: pointer;
-    box-shadow: rgb(59, 59, 217);
-  }  
+    box-shadow: blue;
+  }
+}
+
+
+.main-screen {
+  display: grid;
+  place-items: center;
+  order: 1;
+  img {
+    width: 100%;
+    height: auto;
+    box-shadow: blue;
+  }
+}
+
+.grid-four-column {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+  }
+
+.wrapper{
+  display: grid;
+  grid-template-columns: 0.4fr 1fr;
+  gap: 1rem;
+}
