--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,9 +1,9 @@
 .card{
     position: relative;
-    box-shadow: 0 2px 8px rgba(255, 252, 252, 0.26);
+    box-shadow: 0 2px 8px rgba(31, 1, 1, 0.26);
     border-radius: 6px;
     overflow: hidden;
-    background: rgb(148, 130, 130);
+    background: rgb(239, 241, 248);
     width: 20rem;
     height: 30rem;
     margin-top: 2rem;
@@ -14,6 +14,7 @@
   justify-content: center;
   height: 20rem;
   margin-top: 2rem;
+  
 }
 
 .card-item{
@@ -22,7 +23,7 @@
 }
 
 .card-detail{
-    background-color: aliceblue;
+   background-color: rgb(255, 255, 255);
     justify-content: center;
     height: 10rem;
 
